button switches on and off grayscale

--- a/grayscale_body/popup.html
+++ b/grayscale_body/popup.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Gray Body</h1>
-    <button id="turnON">Switch on!</button>
+    <button id="turnON">Switch</button>
   </body>
 </html>
